--- a/src/features/ContactUs/ui/SocialMedia/SocialMedia.module.scss
+++ b/src/features/ContactUs/ui/SocialMedia/SocialMedia.module.scss
@@ -6,6 +6,7 @@
     right: 5px; //FIX LATER
     padding: 25px 32px;
     width: 64px;
+    z-index: 10;
 
     @include mobile-l {
         width: max-content;
