--- a/src/shared/ui/ButtonUp/ButtonUp.module.scss
+++ b/src/shared/ui/ButtonUp/ButtonUp.module.scss
@@ -5,6 +5,7 @@
     bottom: 20px; //FIX LATER
     right: 12px; //FIX LATER
     background-color: transparent;
+    z-index: 10;
 
     @include tablet-l {
         bottom: 90px; //FIX LATER
